<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
   app:cardBackgroundColor="@color/colorAccent"
    android:orientation="vertical"
    android:elevation="5dp"
    app:cardElevation="2dp"
    android:padding="5dp"
    app:cardCornerRadius="5dp"
    android:layout_margin="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:padding="4dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="5dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:foregroundGravity="center"
                android:padding="5dp"
                android:layout_gravity="center"
                android:id="@+id/rider_image_id"
                android:src="@drawable/ic_add_black_24dp"
                android:layout_width="70dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:gravity="center"
                android:padding="5dp"
                android:textSize="15sp"
                android:id="@+id/rating_id"
                android:text="Rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/user_name"
                android:padding="5dp"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
           <LinearLayout
               android:padding="5dp"
               android:orientation="horizontal"
               android:layout_width="wrap_content"
               android:layout_height="match_parent">
               <TextView
                   android:layout_gravity="center"
                   android:gravity="center"
                   android:id="@+id/source_id"
                   android:padding="5dp"
                   android:textSize="15sp"
                   android:text="@string/source"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"/>
               <ImageView
                   android:layout_gravity="center"
                   android:padding="5dp"
                   android:src="@mipmap/double_arrow"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"/>
               <TextView
                   android:layout_gravity="center"
                   android:gravity="center"
                   android:id="@+id/destination_id"
                   android:padding="5dp"
                   android:textSize="15sp"
                   android:text="@string/Destination"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"/>
           </LinearLayout>
            <LinearLayout
                android:padding="5dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <TextView
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/source_time_id"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:text="@string/source_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:src="@mipmap/double_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/destination_time_id"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:text="@string/Destination_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                 </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/cost"
            android:padding="5dp"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/ride_cost"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
