<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardElevation="5dp"
    android:padding="50dp"
    app:cardBackgroundColor="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:padding="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/journey_start"
            android:textColor="#ffffff"
            android:padding="5dp"
            android:layout_margin="10dp"
            android:text="@string/enter_source"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_directions_bus_black_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_directions_bus_black_24dp" />
        <View
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/black" />
        <TextView
            android:gravity="center_vertical"
            android:drawablePadding="10dp"
            android:id="@+id/journey_end"
            android:textColor="#ffffff"
            android:padding="5dp"
            android:layout_margin="10dp"
            android:text="@string/enter_destination"
            android:drawableStart="@drawable/ic_directions_bus_black_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_directions_bus_black_24dp" />
        <View
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/black" />
        <TextView
            android:gravity="center_vertical"
            android:drawablePadding="10dp"
            android:id="@+id/journey_date"
            android:textColor="#ffffff"
            android:padding="5dp"
            android:layout_margin="10dp"
            android:text="@string/date"
            android:drawableStart="@drawable/ic_date_range_black_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_date_range_black_24dp" />
        <View
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/black" />
        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/linear_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
            app:cornerRadius="5dp"
            android:elevation="5dp"
            android:textColor="#ffffff"
            android:bottomRightRadius="10dp"
            android:bottomLeftRadius="10dp"
            android:topLeftRadius="10dp"
            android:topRightRadius="10dp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:id="@+id/want_ride"
            android:text="@string/want_ride"
            android:background="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
            <Button
                app:cornerRadius="5dp"
                android:elevation="5dp"
                android:textColor="#ffffff"
                android:bottomRightRadius="10dp"
                android:bottomLeftRadius="10dp"
                android:topLeftRadius="10dp"
                android:topRightRadius="10dp"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:id="@+id/ask_ride"
                android:text="@string/ask_ride"
                android:background="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>

